force-app/main/default/objects/Membership__c/fields/Account_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Account_Competitors__c</fullName>
    <label>Account Competitors</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>