force-app/main/default/objects/Membership__c/fields/Account_SharePoint_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_SharePoint_Id__c</fullName>
    <formula>Account_Name__r.sharepoint_folder_id__c</formula>
    <label>Account SharePoint Id</label>
    <type>Text</type>
</CustomField>