force-app/main/default/objects/Membership__c/fields/All_Memberships__c.field-meta.xml
<CustomField>
    <fullName>All_Memberships__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00OJw000005Ha93MAC/view?fv0=&quot;&amp;Account_Name__r.Id,&quot;Subscriptions&quot;)
&amp;BR()&amp;
HYPERLINK(&quot;/lightning/r/Report/00OJw000005Hac5MAC/view?fv0=&quot;&amp;Account_Name__r.Id,&quot;Programs&quot;)
&amp;BR()&amp;
HYPERLINK(&quot;/lightning/r/Report/00O1O000009FAvgUAG/view?fv0=&quot;&amp;Account_Name__r.Id,&quot;All&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Memberships</label>
    <type>Text</type>
</CustomField>