force-app/main/default/objects/Membership__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <label>Business Objective</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>