force-app/main/default/objects/Membership__c/fields/Business_Objective_Prior_Term__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective_Prior_Term__c</fullName>
    <label>Business Objective (Prior Term)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>