force-app/main/default/objects/Membership__c/fields/Conference_System__c.field-meta.xml
<CustomField>
    <fullName>Conference_System__c</fullName>
    <label>Conference System</label>
    <type>TextArea</type>
</CustomField>