force-app/main/default/objects/Membership__c/fields/Contact_Downloads_Restricted_to__c.field-meta.xml
<CustomField>
    <fullName>Contact_Downloads_Restricted_to__c</fullName>
    <label>Contact Downloads Restricted</label>
    <type>TextArea</type>
</CustomField>