force-app/main/default/objects/Membership__c/fields/CRM_System__c.field-meta.xml
<CustomField>
    <fullName>CRM_System__c</fullName>
    <label>CRM System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>