force-app/main/default/objects/Membership__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <formula
  >Account_Name__r.Concierge_1__r.FirstName &amp;&quot; &quot;&amp; Account_Name__r.Concierge_1__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM</label>
    <type>Text</type>
</CustomField>