force-app/main/default/objects/Membership__c/fields/DEN_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_Created_Date__c</fullName>
    <formula>Account_Name__r.DEN_Most_Recent_Membership__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Created Date</label>
    <type>Date</type>
</CustomField>