force-app/main/default/objects/Membership__c/fields/DEN_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_End_Date__c</fullName>
    <formula>Account_Name__r.DEN_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN End Date</label>
    <type>Date</type>
</CustomField>