force-app/main/default/objects/Membership__c/fields/DEN_Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_Extended_Date__c</fullName>
    <formula>Account_Name__r.DEN_Extended_Date_Membership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Extended Date</label>
    <type>Date</type>
</CustomField>