force-app/main/default/objects/Membership__c/fields/DEN_First_Access_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_First_Access_Date__c</fullName>
    <formula>Account_Name__r.DEN_First_Access_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN First Access Date</label>
    <type>Date</type>
</CustomField>