force-app/main/default/objects/Membership__c/fields/DEN_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>DEN_Membership_Status__c</fullName>
    <formula>Account_Name__r.DEN_Membership_Contract_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Membership Status</label>
    <type>Text</type>
</CustomField>