force-app/main/default/objects/Membership__c/fields/DEN_Stage__c.field-meta.xml
<CustomField>
    <fullName>DEN_Stage__c</fullName>
    <formula>Account_Name__r.DEN_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Stage</label>
    <type>Text</type>
</CustomField>