force-app/main/default/objects/Membership__c/fields/DEN_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DEN_Start_Date__c</fullName>
    <formula>Account_Name__r.DEN_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Start Date</label>
    <type>Date</type>
</CustomField>