force-app/main/default/objects/Membership__c/fields/DEN_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>DEN_Total_Value__c</fullName>
    <formula>Account_Name__r.DEN_Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEN Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>