force-app/main/default/objects/Membership__c/fields/DGN_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DGN_Created_Date__c</fullName>
    <formula>Account_Name__r.DGN_Most_Recent_Membership__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Created Date</label>
    <type>Date</type>
</CustomField>