force-app/main/default/objects/Membership__c/fields/DGN_Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>DGN_Extended_Date__c</fullName>
    <formula>Account_Name__r.DGN_Membership_Extended_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Extended Date</label>
    <type>Date</type>
</CustomField>