force-app/main/default/objects/Membership__c/fields/DGN_First_Access_Date__c.field-meta.xml
<CustomField>
    <fullName>DGN_First_Access_Date__c</fullName>
    <formula>Account_Name__r.DGN_First_Access_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN First Access Date</label>
    <type>Date</type>
</CustomField>