force-app/main/default/objects/Membership__c/fields/DGN_Memberships__c.field-meta.xml
<CustomField>
    <fullName>DGN_Memberships__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O1O000009F8Ta/view?fv0=&quot;&amp;Account_Name__r.Id,&quot;All Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Membership History</label>
    <type>Text</type>
</CustomField>