force-app/main/default/objects/Membership__c/fields/DGN_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>DGN_Renewal_Status__c</fullName>
    <formula>Account_Name__r.DGN_Renewal_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Renewal Status</label>
    <type>Text</type>
</CustomField>