force-app/main/default/objects/Membership__c/fields/DGN_Stage__c.field-meta.xml
<CustomField>
    <fullName>DGN_Stage__c</fullName>
    <formula>Account_Name__r.DGN_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Stage</label>
    <type>Text</type>
</CustomField>