force-app/main/default/objects/Membership__c/fields/DGN_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DGN_Start_Date__c</fullName>
    <formula>Account_Name__r.DGN_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DGN Start Date</label>
    <type>Date</type>
</CustomField>