force-app/main/default/objects/Membership__c/fields/Expiration_Intel__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Intel__c</fullName>
    <label>Expiration Intel</label>
    <type>TextArea</type>
</CustomField>