force-app/main/default/objects/Membership__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <type>TextArea</type>
</CustomField>