force-app/main/default/objects/Membership__c/fields/ICA_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ICA_Membership_Level__c</fullName>
    <formula>Account_Name__r.ICA_Membership_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Membership Level</label>
    <type>Text</type>
</CustomField>