force-app/main/default/objects/Membership__c/fields/IFL_Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>IFL_Extended_Date__c</fullName>
    <formula>Account_Name__r.IFL_Extended_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFL Extended Date</label>
    <type>Date</type>
</CustomField>