force-app/main/default/objects/Membership__c/fields/IFL_Membership_History__c.field-meta.xml
<CustomField>
    <fullName>IFL_Membership_History__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O5Y00000DqJ31UAF/view?fv0=&quot;&amp;Account_Name__r.Id,&quot;All Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFL Membership History</label>
    <type>Text</type>
</CustomField>