force-app/main/default/objects/Membership__c/fields/IFL_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>IFL_Membership_Level__c</fullName>
    <formula>Account_Name__r.IFL_Membership_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFL Membership Level</label>
    <type>Text</type>
</CustomField>