force-app/main/default/objects/Membership__c/fields/IFL_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>IFL_Renewal_Status__c</fullName>
    <formula>Account_Name__r.IFL_Renewal_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFL Renewal Status</label>
    <type>Text</type>
</CustomField>