force-app/main/default/objects/Membership__c/fields/IFL_Stage__c.field-meta.xml
<CustomField>
    <fullName>IFL_Stage__c</fullName>
    <formula>Account_Name__r.IFL_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFL Stage</label>
    <type>Text</type>
</CustomField>