force-app/main/default/objects/Membership__c/fields/IFL_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>IFL_Total_Value__c</fullName>
    <formula>Account_Name__r.IFL_Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFL Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>