force-app/main/default/objects/Membership__c/fields/Insider_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Insider_Sales_Status__c</fullName>
    <formula>Account_Name__r.TW_Sales_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insider Sales Status</label>
    <type>Text</type>
</CustomField>