force-app/main/default/objects/Membership__c/fields/Insider_Stage__c.field-meta.xml
<CustomField>
    <fullName>Insider_Stage__c</fullName>
    <formula>Account_Name__r.Insider_Stage__c</formula>
    <label>Insider Stage</label>
    <type>Text</type>
</CustomField>