force-app/main/default/objects/Membership__c/fields/IT_Categories_Set_up__c.field-meta.xml
<CustomField>
    <fullName>IT_Categories_Set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Categories Set up</label>
    <type>Checkbox</type>
</CustomField>