force-app/main/default/objects/Membership__c/fields/ITX_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ITX_End_Date__c</fullName>
    <formula>Account_Name__r.ITX_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITX End Date</label>
    <type>Date</type>
</CustomField>