force-app/main/default/objects/Membership__c/fields/ITX_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ITX_Membership_Level__c</fullName>
    <formula>Account_Name__r.ITX_Membership_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITX Membership Level</label>
    <type>Text</type>
</CustomField>