force-app/main/default/objects/Membership__c/fields/ITX_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>ITX_Renewal_Status__c</fullName>
    <formula>Account_Name__r.ITX_Renewal_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITX Renewal Status</label>
    <type>Text</type>
</CustomField>