force-app/main/default/objects/Membership__c/fields/ITX_Stage__c.field-meta.xml
<CustomField>
    <fullName>ITX_Stage__c</fullName>
    <formula>Account_Name__r.ITX_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITX Stage</label>
    <type>Text</type>
</CustomField>