force-app/main/default/objects/Membership__c/fields/ITX_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>ITX_Total_Value__c</fullName>
    <formula>Account_Name__r.ITX_Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITX Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>