force-app/main/default/objects/Membership__c/fields/Membership_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Note_Date__c</fullName>
    <label>Membership Note Date</label>
    <type>Date</type>
</CustomField>