force-app/main/default/objects/Membership__c/fields/Membership_Note_History__c.field-meta.xml
<CustomField>
    <fullName>Membership_Note_History__c</fullName>
    <label>Membership Note History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>