force-app/main/default/objects/Membership__c/fields/Membership_Note_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Membership_Note_Last_Updated__c</fullName>
    <description
  >Time stamp of when the Membership Note was most recently updated.</description>
    <inlineHelpText
  >Time stamp of when the Membership Note was most recently updated.</inlineHelpText>
    <label>Membership Note Last Updated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>