force-app/main/default/objects/Membership__c/fields/NAV_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>NAV_Entry_Date__c</fullName>
    <inlineHelpText
  >First ever membership date for Navigator (DEN or DGN)</inlineHelpText>
    <label>NAV Entry Date</label>
    <type>Date</type>
</CustomField>