force-app/main/default/objects/Membership__c/fields/NAV_First_Access_Date__c.field-meta.xml
<CustomField>
    <fullName>NAV_First_Access_Date__c</fullName>
    <formula>Account_Name__r.NAV_First_Access_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAV First Access Date</label>
    <type>Date</type>
</CustomField>