force-app/main/default/objects/Membership__c/fields/NAV_Member_Engagement__c.field-meta.xml
<CustomField>
    <fullName>NAV_Member_Engagement__c</fullName>
    <formula
  >Account_Name__r.NAV_Member_Engagement__r.FirstName &amp; &quot; &quot; &amp;  Account_Name__r.NAV_Member_Engagement__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Engagement Rep</label>
    <type>Text</type>
</CustomField>