force-app/main/default/objects/Membership__c/fields/Nav_TW_Login_Report__c.field-meta.xml
<CustomField>
    <fullName>Nav_TW_Login_Report__c</fullName>
    <formula
  >HYPERLINK(&quot;https://www.governmentnavigator.com/api/salesforce?method=redirect_to_login_report&amp;salesforce_id=&quot;&amp; Account_Name__r.Id, &quot;Last 12 Months&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nav/Insider Login Report</label>
    <type>Text</type>
</CustomField>