force-app/main/default/objects/Membership__c/fields/Navigator_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Analyst__c</fullName>
    <formula
  >Account_Name__r.Navigator_Analyst__r.FirstName &amp; &quot; &quot; &amp;  Account_Name__r.Navigator_Analyst__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navigator Analyst</label>
    <type>Text</type>
</CustomField>