force-app/main/default/objects/Membership__c/fields/Navigator_Analyst_Hours__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Analyst_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Navigator Analyst Hours</label>
    <referenceTo>SFL5_Projects__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>