force-app/main/default/objects/Membership__c/fields/Navigator_Analyst_Hours_Projects__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Analyst_Hours_Projects__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O5Y000009WTi3UAG/view?fv0=&quot;&amp; Account_Name__r.Id ,&quot;View Hours&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navigator Analyst Hours</label>
    <type>Text</type>
</CustomField>