force-app/main/default/objects/Membership__c/fields/Navigator_Competitor_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Competitor_Expiration_Date__c</fullName>
    <formula>Account_Name__r.Navigator_Competitor_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >To update this information, go to the related Account record and edit the Navigator Competitor Expiration Date field there.</inlineHelpText>
    <label>Navigator Competitor Expiration Date</label>
    <type>Text</type>
</CustomField>