force-app/main/default/objects/Membership__c/fields/Navigator_Competitor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Competitor_Notes__c</fullName>
    <formula>Account_Name__r.Navigator_Competitor_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >To update this information, go to the related Account record and edit the Navigator Competitor Notes field there.</inlineHelpText>
    <label>Navigator Competitor Notes</label>
    <type>Text</type>
</CustomField>