force-app/main/default/objects/Membership__c/fields/Navigator_Insider_Stage__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Insider_Stage__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O1O000009FAvgUAG/view?fv0=&quot;&amp;Account_Name__r.Id,

IF( DGN_Stage__c = &quot;&quot;,  &quot;&quot;, DGN_Stage__c &amp; &quot; DGN&quot; &amp; &quot;; &quot;) &amp; 
IF( DEN_Stage__c = &quot;&quot;,  &quot;&quot;, DEN_Stage__c &amp; &quot; DEN&quot; &amp; &quot;; &quot;) &amp; 
IF( TW_Stage__c =  &quot;&quot;,  &quot;&quot;, TW_Stage__c  &amp; &quot; ICA&quot; &amp; &quot;; &quot;) &amp; 
IF( ITX_Stage__c = &quot;&quot;,  &quot;&quot;, ITX_Stage__c &amp; &quot; ITX&quot; &amp; &quot;; &quot;)
)</formula>
    <label>Navigator/Insider Stage</label>
    <type>Text</type>
</CustomField>