force-app/main/default/objects/Membership__c/fields/Navigator_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Sales_Status__c</fullName>
    <formula>Account_Name__r.Navigator_Sales_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navigator Sales Status</label>
    <type>Text</type>
</CustomField>