force-app/main/default/objects/Membership__c/fields/Navigator_Stage__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Stage__c</fullName>
    <formula>Account_Name__r.Navigator_Stage__c</formula>
    <label>Navigator Stage</label>
    <type>Text</type>
</CustomField>