force-app/main/default/objects/Membership__c/fields/Partners__c.field-meta.xml
<CustomField>
    <fullName>Partners__c</fullName>
    <label>Partners</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>