force-app/main/default/objects/Membership__c/fields/Past_NAV_Member_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Past_NAV_Member_Engagement__c</fullName>
    <formula>Account_Name__r.Past_NAV_Member_Engagement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Member Engagement Rep</label>
    <type>Text</type>
</CustomField>