force-app/main/default/objects/Membership__c/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <formula>Account_Name__r.Sales_Admin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Admin</label>
    <type>Text</type>
</CustomField>