force-app/main/default/objects/Membership__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <formula>Account_Name__r.Sales_Engineer_Owner__c</formula>
    <label>Sales Engineer</label>
    <type>Text</type>
</CustomField>