force-app/main/default/objects/Membership__c/fields/Sales_Territory_Map_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_Map_Date__c</fullName>
    <description>Date the Sales Territory Map was received</description>
    <inlineHelpText>Date the Sales Territory Map was received</inlineHelpText>
    <label>Sales Territory Map (Date)</label>
    <type>Date</type>
</CustomField>