force-app/main/default/objects/Membership__c/fields/Teams_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Teams_Set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teams Set up</label>
    <type>Checkbox</type>
</CustomField>