force-app/main/default/objects/Membership__c/fields/TW_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TW_End_Date__c</fullName>
    <formula>Account_Name__r.TW_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA End Date</label>
    <type>Date</type>
</CustomField>