force-app/main/default/objects/Membership__c/fields/TW_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>TW_Entry_Date__c</fullName>
    <inlineHelpText>First ever membership date for Techwire</inlineHelpText>
    <label>TW Entry Date</label>
    <type>Date</type>
</CustomField>