force-app/main/default/objects/Membership__c/fields/TW_Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>TW_Extended_Date__c</fullName>
    <formula>Account_Name__r.TW_Membership_Extended_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Extended Date</label>
    <type>Date</type>
</CustomField>