force-app/main/default/objects/Membership__c/fields/TW_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>TW_Membership_Status__c</fullName>
    <formula>Account_Name__r.TW_Membership_Contract_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Membership Status</label>
    <type>Text</type>
</CustomField>