force-app/main/default/objects/Membership__c/fields/TW_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>TW_Renewal_Status__c</fullName>
    <formula>Account_Name__r.TW_Renewal_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Renewal Status</label>
    <type>Text</type>
</CustomField>