force-app/main/default/objects/Membership__c/fields/TW_Stage__c.field-meta.xml
<CustomField>
    <fullName>TW_Stage__c</fullName>
    <formula>Account_Name__r.TW_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Stage</label>
    <type>Text</type>
</CustomField>