force-app/main/default/objects/Membership__c/fields/TW_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TW_Start_Date__c</fullName>
    <formula>Account_Name__r.TW_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICA Start Date</label>
    <type>Date</type>
</CustomField>