force-app/main/default/objects/Membership__c/fields/Unique_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Account_Name__c</fullName>
    <description
  >Hidden field used to prevent two memberships from being created under one account.</description>
    <inlineHelpText
  >Hidden field used to prevent two memberships from being created under one account.</inlineHelpText>
    <label>Unique Account Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>