force-app/main/default/objects/Membership__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <label>Wins</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>